[project]
dynamic = ["version"]
name = "open-source-template"
description = "A demo for the OSS template at MeteoSwiss."
license = "BSD-3-Clause"
readme = "README.rst"
authors = [{ name = "PXF", email = "f_python@meteoswiss.ch" }]
requires-python = ">=3.11,<3.14"
dependencies = [
]

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
lint = [
    "mypy (>=1.18.1,<2.0.0)",
    "pylint (>=3.3.8,<4.0.0)",
    "yapf (>=0.43.0,<0.44.0)"
]
doc = [
    "pydata-sphinx-theme (>=0.16.1,<0.17.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autoapi (>=3.6.0,<4.0.0)"
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "doc" }
]

[tool.poetry]
requires-poetry = ">=2.0,<3.0"
version = "0.0.0"  # DO NOT SET. The version of the package is always set by the CI/CD pipeline.
include = ["CHANGELOG.rst"]

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[tool.pylint.master]
disable = [
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstring
    'W0511', # fix me or to-do comments are already covered by SonarQube
]

[tool.pylint.basic]
argument-naming-style = 'any'
attr-naming-style = 'any'

[tool.pylint.format]
# Maximum number of lines in a module.
max-line-length = 120

[tool.pylint.design]
# Minimum number of public methods for a class (see R0903).
min-public-methods = 0

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true


[tool.coverage.run]
omit = ["test/**",  "doc/**"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
